<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <Button
        android:id="@+id/main_button_settings"
        style="@style/ButtonBarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_settings" />

    <Button
        android:id="@+id/main_button_start"
        style="@style/ButtonBarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_start" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            style="@style/NonEditableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_game_code" />

        <EditText
            android:id="@+id/main_game_code"
            style="@style/EditableTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

	    <TableRow
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView2"
	            style="@style/NonEditableTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:text="@string/main_bomb_code1" />
	
	        <EditText
	            android:id="@+id/main_bomb_code1"
	            style="@style/NonEditableEditText"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:clickable="false"
	            android:cursorVisible="false"
	            android:ems="10"
	            android:focusable="false"
	            android:focusableInTouchMode="false"
	            android:inputType="none" >
	
	            <requestFocus />
	        </EditText>
	
	    </TableRow>
	
	    <TableRow
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView3"
	            style="@style/NonEditableTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:text="@string/main_bomb_code2" />
	
	        <EditText
	            android:id="@+id/main_bomb_code2"
	            style="@style/NonEditableEditText"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:clickable="false"
	            android:cursorVisible="false"
	            android:ems="10"
	            android:focusable="false"
	            android:focusableInTouchMode="false"
	            android:inputType="none" />
	
	    </TableRow>
	
	    <TableRow
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:id="@+id/textView4"
	            style="@style/NonEditableTextView"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_vertical"
	            android:text="@string/main_defuse_code" />
	
	        <EditText
	            android:id="@+id/main_defuse_code"
	            style="@style/NonEditableEditText"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:clickable="false"
	            android:cursorVisible="false"
	            android:ems="10"
	            android:focusable="false"
	            android:focusableInTouchMode="false"
	            android:inputType="none" />
	
	    </TableRow>
	</TableLayout>
</LinearLayout>
