<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/green"
        android:text="@string/bomb_game_status_label" />

    <TextView
        android:id="@+id/bomb_game_status"
        style="@style/NonEditableTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text=""
        android:textSize="50sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/textView2"
        style="@style/NonEditableTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/bomb_bomb_status_label" />

    <TextView
        android:id="@+id/bomb_bomb_status"
        style="@style/NonEditableTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text=""
        android:textSize="50sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical" >

		<View
		    android:layout_width="wrap_content"
		    android:layout_height="0dp"
		    android:layout_weight="1" />

		<Button
		    android:id="@+id/bomb_button_end_game"
		    style="@style/ButtonBarButton"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/bomb_button_game_end"  />

		<Button
		    android:id="@+id/bomb_button_bomb_set_defuse"
		    style="@style/ButtonBarButton"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/bomb_button_bomb_set" />

    </LinearLayout>

</LinearLayout>